# Archival_Rag_System

./: .gitignore  README.md  config.yaml  interact.py  main.py  main2.py  main_jsonl_chat.py  main_pdf_chat.py  pyproject.toml  test_local_gen.py  testing.ipynb  visualize_results.py
evaluation/: evaluate.py  metrics.py  trigger_evaluation.py
learning/: ingest_corpus_jsonl.py
learning/learning/chroma/: chroma.sqlite3
results/: evaluation_results_20260312_111447.json
results2/: 1_evaluation_results_20260316_133124.json  2_evaluation_results_20260316_150509.json  3_evaluation_results_20260316_162004.json
src/: bm25_retriever.py  chroma_storage.py  compressor.py  config.py  config.yaml  create_queries.py  create_ragas_dataset.py  custom_types.py  faiss_storage.py  generation.py  ingest_corpus_jsonl.py  ingest_pdf.py  retrievers.py
src/prompts/: recomp_abstractive.json  recomp_abstractive.txt  recomp_extractive.json  recomp_prompt.json  system_prompt.json  system_prompt.txt
storage/: docstore.jsonl  faiss.index  ids.json
