[project]
name = "archival-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma>=0.2.0",
    "chromadb>=1.5.4",
    "datasets>=4.7.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "inngest>=0.5.16",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langsmith>=0.7.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "orjson>=3.11.7",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
    "wandb>=0.25.1",
]
